# tileboard-reborn

./: .dockerignore  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  build.yaml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  quasar.config.ts  repository.json  run.sh
.github/workflows/: ci.yml  release.yml
configs/example/: config.yaml
docs/: development.md  index.md  installation.md  mkdocs.yml
docs/configuration/: actions.md  index.md  more-info.md  pages.md  restrictions.md  screensaver.md
frontend/: package.json
frontend/src/: App.vue
server/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  server.config.example.yaml
server/tileboardserver/: server.py
src/: App.vue
src/components/: BaseWidget.vue  GridSection.vue  WidgetRenderer.vue
src/composables/: useActionExecutor.ts  useWidget.ts
src/css/: _colormap.scss  _widget.scss  app.scss  variables.scss
src/layouts/: MainLayout.vue
src/pages/: DashboardPage.vue  OnboardingPage.vue
src/router/: routes.ts
src/stores/: calendar.ts  home-assistant.ts  screensaver.ts  sendspin.ts  states.ts
src/types/: actions.ts  calendar.ts  config.ts  list-widget.ts  page.ts  screensaver.ts  sections.ts  weather-alerts.ts  weather.ts  widgets.ts
src/utils/: haIcons.ts  resolveWidgetProp.ts  slugifyState.ts  weatherIcons.ts  widgetRegistry.ts
src/widgets/: ButtonWidget.vue  CalendarWidget.vue  CameraWidget.vue  ClimateWidget.vue  ErrorWidget.vue  FanWidget.vue  LightWidget.vue  NumberWidget.vue  SensorWidget.vue  (+4 more)
tileboardserver/: server.py
(+92 files in other folders)
